<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>freespace_planner</name>
  <version>1.0.0</version>
  <description>The freespace_planner package</description>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <maintainer email="aohsato@gmail.com">Akihito Ohsato</maintainer>
  <license>Apache License 2.0</license>
  <author email="aohsato@gmail.com">Akihito Ohsato</author>
  <author email="antm678@ertl.jp">Tomohito Ando</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_auto_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>autoware_auto_common</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
