<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_velocity_planner</name>
  <version>1.0.0</version>
  <description>Global velocity planner, it will be used to test the controllers</description>
  <maintainer email="berkay@leodrive.ai">Berkay Karaman</maintainer>
  <license>Apache 2.0</license>


  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_auto_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <depend>autoware_auto_common</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autoware_auto_geometry</depend>
  <depend>had_map_utils</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>autoware_auto_tf2</depend>
  <depend>motion_common</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>autoware_testing</test_depend>
  <test_depend>ros_testing</test_depend>


    <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
