<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interactive_trajectory_spoofer</name>
  <version>1.0.0</version>
  <description>Creates dummy trajectories with rviz interactive markers.</description>
  <maintainer email="maxime.clement@tier4.jp">Maxime CLEMENT</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_auto_cmake</buildtool_depend>

  <depend>autoware_auto_common</depend>
  <depend>autoware_auto_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>interactive_markers</depend>

  <build_depend>eigen</build_depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
